--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,6 +91,22 @@
         </div>
     </div>
 </div>
+<div id="win-page" class="hidden" style="margin-top:65px">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading"><h3 class="panel-title"><strong>Congs, you win ! </strong></h3>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="lost-page" class="hidden" style="margin-top:65px">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading"><h3 class="panel-title"><strong>Sorry, you lost ! </strong></h3>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="/js/sockjs.min.js"></script>
 <script src="/js/stomp.min.js"></script>
 <script src="/js/main.js"></script>
