--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,6 +87,13 @@
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
                 <button type="button" id="moveButton" class="btn btn-success">Send</button>
+                <div class="input-group">
+                    <div class="checkbox" style="margin-top: 0px;">
+                        <label>
+                            <input id="simulate" type="checkbox" name="remember" value="1"/> Simulate
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
